# lakefs-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: errors.rs  lib.rs  utils.rs
src/api/: api_requests.rs  client_core.rs  core_request.rs  lakefs_client.rs  lakefs_config.rs  mod.rs  repositories.rs  setup.rs  users.rs
src/api/api_data/: mod.rs  object_data.rs  repository_data.rs  request_data.rs  setup_data.rs
src/api/sub_api/: group_api.rs  mod.rs  object_api.rs  object_data.rs  repositories.rs  repository_data.rs  setup.rs  users.rs  users_data.rs
src/api/tests/: mod.rs  test_branch_api.rs  test_object_api.rs  test_setup_repositories.rs  test_setup_user.rs  test_users_api.rs
